Cycles: from buildbot Crash when disable per Object Motion Blur #54299

Closed
opened 2018-03-12 14:02:45 +01:00 by YAFU · 6 comments

System Information
Linux 64bits - GTX 960 - i7 3770

Blender Version
Broken: 3eaa408cb3

Short description of error
Blender crash with Segmentation fault (core dumped) message in terminal.

Exact steps for others to reproduce the error
Open Blender, Cycles with cube by default. Enable Motion Blur in Render tab. Select Cube. In Object tab uncheck Motion Blur for cube. Render Image. Blender Crash.

**System Information** Linux 64bits - GTX 960 - i7 3770 **Blender Version** Broken: 3eaa408cb32 **Short description of error** Blender crash with Segmentation fault (core dumped) message in terminal. **Exact steps for others to reproduce the error** Open Blender, Cycles with cube by default. Enable Motion Blur in Render tab. Select Cube. In Object tab uncheck Motion Blur for cube. Render Image. Blender Crash.
Author

Added subscriber: @YAFU

Added subscriber: @YAFU

Added subscriber: @ArtoKitula

Added subscriber: @ArtoKitula

This is confirmed. (macOS)

Assertion failed: (i < datasize_), function operator- [ ], file /Users/azo/Code/blender/blender-build/blender/intern/cycles/render/../util/util_vector.h, line 262.

This is confirmed. (macOS) Assertion failed: (i < datasize_), function operator- [ ], file /Users/azo/Code/blender/blender-build/blender/intern/cycles/render/../util/util_vector.h, line 262.
Brecht Van Lommel was assigned by Arto Kitula 2018-03-12 14:38:57 +01:00

This issue was referenced by blender/cycles@8cd82ce2bd

This issue was referenced by blender/cycles@8cd82ce2bd112b7bd3fe8df8be326c41a72b28f9

This issue was referenced by 17793a66c6

This issue was referenced by 17793a66c684aa86559de90d4cb5af7e65a06f66

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#54299
No description provided.