Fix T54299: crash rendering objects with motion blur disabled, after recent changes.